# december-api-tests

./: README.md  conftest.py  pyproject.toml
common/: custom_log.py
fixtures/: app.py  base_model.py  constants.py
fixtures/auth/: api.py  model.py
fixtures/register/: api.py  models.py
fixtures/users/: api.py  model.py
register/: test_register.py
tests/auth/: auth_new_user.py
tests/register/: test_register.py
tests/user_info/: test_add_user_info.py
